--- a/Client/DaisyControl/DaisyConnect.csproj
+++ b/Client/DaisyControl/DaisyConnect.csproj
@@ -25,10 +25,15 @@
 
   <ItemGroup>
     <PackageReference Include="Extended.Wpf.Toolkit" Version="4.0.1" />
+    <PackageReference Include="xunit" Version="2.4.1" />
+    <PackageReference Include="xunit.runner.visualstudio" Version="2.4.3">
+      <PrivateAssets>all</PrivateAssets>
+      <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
+    </PackageReference>
   </ItemGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\..\..\Common\DaisyUtils\DaisyUtils.csproj" />
+    <ProjectReference Include="..\..\Common\DaisyCommon\DaisyCommon.csproj" />
   </ItemGroup>
 
 </Project>
