--- a/Common/DaisyCommon/DaisyCommon.csproj
+++ b/Common/DaisyCommon/DaisyCommon.csproj
@@ -2,33 +2,24 @@
 
   <PropertyGroup>
     <TargetFramework>net5.0</TargetFramework>
-    <Version>1.0.0.0</Version>
-    <Platforms>AnyCPU;x64</Platforms>
     <Authors>Illoydius</Authors>
+    <Version>1.0.0.0</Version>
     <Product>DaisyControl</Product>
-    <Copyright>@Illoydius 2021</Copyright>
-    <AssemblyName>DaisyControl.Server.DaisyMind</AssemblyName>
-    <RootNamespace>DaisyControl.Server.DaisyMind</RootNamespace>
+    <AssemblyName>DaisyControl.Common.DaisyCommon</AssemblyName>
+    <RootNamespace>DaisyControl.Common.DaisyCommon</RootNamespace>
   </PropertyGroup>
 
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|AnyCPU'">
-    <PlatformTarget>AnyCPU</PlatformTarget>
+    <PlatformTarget>x64</PlatformTarget>
   </PropertyGroup>
 
-  <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">
+  <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Release|AnyCPU'">
     <PlatformTarget>x64</PlatformTarget>
   </PropertyGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\..\Common\DaisyCommon\DaisyCommon.csproj" />
-  </ItemGroup>
-
-  <ItemGroup>
-    <Folder Include="Modules\Personality\" />
-  </ItemGroup>
-
-  <ItemGroup>
     <PackageReference Include="Microsoft.NET.Test.Sdk" Version="16.8.3" />
+    <PackageReference Include="Newtonsoft.Json" Version="12.0.3" />
     <PackageReference Include="xunit" Version="2.4.1" />
     <PackageReference Include="xunit.runner.visualstudio" Version="2.4.3">
       <PrivateAssets>all</PrivateAssets>
